platform_admins/starter_repos/online_boutique/services/services/frontend/templates/virtualservice--subset-patch.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  http:
  - route:
    - destination:
        host: frontend
        subset: gcp
        port:
          number: 80
      weight: 50
    - destination:
        host: frontend
        subset: aws
        port:
          number: 80
      weight: 50
